--- a/templates/comment_admin/index.html.twig
+++ b/templates/comment_admin/index.html.twig
@@ -11,7 +11,7 @@
 {% block content_body %}
 <div class="row">
 	<div class="col-sm-12">
-		<h1>Manage Comments</h1>
+        <h1>Manage Comments ({{ pagination.getTotalItemCount }})</h1>
 
         <form>
             <div class="input-group mb-3">
@@ -35,7 +35,7 @@
                 </tr>
             </thead>
             <tbody>
-            {% for comment in comments %}
+            {% for comment in pagination %}
                 <tr>
                     <td>
                         <a href="{{ path('article_show', {'slug': comment.article.slug}) }}">{{ comment.article.title }}</a>
@@ -59,7 +59,8 @@
             {% endfor %}
             </tbody>
         </table>
-
+        
+        {{ knp_pagination_render(pagination) }}
 	</div>
 </div>
 {% endblock %}
