--- a/templates/article/homepage.html.twig
+++ b/templates/article/homepage.html.twig
@@ -27,6 +27,13 @@
 							<div class="article-title d-inline-block pl-3 align-middle">
 								<span>{{ article.title }}</span>
 								<small>({{ article.nonDeletedComments|length }} comments)</small>
+                                <br />
+                                {% for tag in article.tags %}
+                                <small>
+                                    <span class="badge badge-light">{{ tag.name }}</span>
+                                </small>
+                                {% endfor %}
+
 								<br>
 								<span class="align-left article-details"><img class="article-author-img rounded-circle" src="{{ asset('images/alien-profile.png') }}">
 									{{ article.author }}
