--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,7 +23,7 @@
 	<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 	<div class="checkbox mb-3">
 		<label>
-			<input type="checkbox" value="remember-me">
+			<input type="checkbox" name="_remember_me">
 			Remember me
 		</label>
 	</div>
