--- a/templates/article_admin/new.html.twig
+++ b/templates/article_admin/new.html.twig
@@ -5,7 +5,10 @@
 
         {{ form_start(articleForm,  {'attr': {'novalidate': 'novalidate'}}) }}
 
-        {{ form_widget(articleForm) }}
+        {{ form_row(articleForm.title) }}
+        {{ form_row(articleForm.author) }}
+        {{ form_row(articleForm.content) }}
+        {{ form_row(articleForm.publishedAt) }}
 
         <button type="submit" class="btn btn-primary">Create!</button>
     {{ form_end(articleForm) }}
