--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -9,8 +9,15 @@
 {% endblock %}
 
 {% block body %}
-{# Todo - replace with a symfony form! #}
-<form class="form-signin" method="post">
+
+{{ form_start(registrationForm) }}
+    {{ form_widget(registrationForm) }}
+    <button class="btn btn-lg btn-primary btn-block" type="submit">
+        Register
+    </button>
+{{ form_end(registrationForm) }}
+
+{# <form class="form-signin" method="post">
 	<h1 class="h3 mb-3 font-weight-normal">Register</h1>
 	<label for="inputEmail" class="sr-only">Email address</label>
 	<input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
@@ -25,6 +32,6 @@
 	<button class="btn btn-lg btn-primary btn-block" type="submit">
 		Register
 	</button>
-</form>
+</form> #}
 
 {% endblock %}
