--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -2,11 +2,14 @@
 {% form_theme registrationForm _self %}
 
 {%- block form_row -%}
-{%- set widget_attr = {} -%}
-{%- if help is not empty -%}
-	{%- set widget_attr = {attr: {'aria-describedby': id ~"_help"}} -%}
-{%- endif -%}
-	{{- form_label(form) -}}
+    {%- set widget_attr = {} -%}
+
+    {%- if help is not empty -%}
+        {%- set widget_attr = {attr: {'aria-describedby': id ~"_help"}} -%}
+    {%- endif -%}
+	{{- form_label(form, null, {
+        label_attr: { class: 'sr-only' }
+    }) -}}
 	{{- form_errors(form) -}}
 	{{- form_widget(form, widget_attr) -}}
 	{{- form_help(form) -}}
@@ -32,7 +35,14 @@
 }) }}
 <h1 class="h3 mb-3 font-weight-normal">Register</h1>
 
-    {{ form_widget(registrationForm) }}
+    {{ form_row(registrationForm.email, {
+        attr: { placeholder: 'Email' }
+    }) }}
+    {{ form_row(registrationForm.plainPassword, {
+        attr: { placeholder: 'Password' }
+    }) }}
+    {{ form_row(registrationForm.agreeTerms) }}
+
     <button class="btn btn-lg btn-primary btn-block" type="submit">
         Register
     </button>
