--- a/templates/article_admin/_form.html.twig
+++ b/templates/article_admin/_form.html.twig
@@ -5,6 +5,8 @@
     }) }}
 
     {{ form_row(articleForm.author) }}
+    {{ form_row(articleForm.location) }}
+    {{ form_row(articleForm.specificLocationName) }}
     {{ form_row(articleForm.content) }}
 
     {% if articleForm.publishedAt is defined %}
