--- a/templates/article_admin/_form.html.twig
+++ b/templates/article_admin/_form.html.twig
@@ -6,7 +6,11 @@
 
     {{ form_row(articleForm.author) }}
     {{ form_row(articleForm.location) }}
-    {{ form_row(articleForm.specificLocationName) }}
+
+    {% if articleForm.specificLocationName is defined %}
+        {{ form_row(articleForm.specificLocationName) }}
+    {% endif %}
+   
     {{ form_row(articleForm.content) }}
 
     {% if articleForm.publishedAt is defined %}
