--- a/templates/article_admin/_form.html.twig
+++ b/templates/article_admin/_form.html.twig
@@ -5,11 +5,18 @@
     }) }}
 
     {{ form_row(articleForm.author) }}
-    {{ form_row(articleForm.location) }}
+    {{ form_row(articleForm.location, {
+        attr: {
+            'data-specific-location-url': path('admin_article_location_select'),
+            'class': 'js-article-form-location'
+        }
+    }) }}
 
-    {% if articleForm.specificLocationName is defined %}
-        {{ form_row(articleForm.specificLocationName) }}
-    {% endif %}
+    <div class="js-specific-location-target">
+        {% if articleForm.specificLocationName is defined %}
+            {{ form_row(articleForm.specificLocationName) }}
+        {% endif %}
+    </div>
    
     {{ form_row(articleForm.content) }}
 
